--- a/SpringLearning/SpringBoot-AOP/src/main/resources/application.yml
+++ b/SpringLearning/SpringBoot-AOP/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     username: root
     password: 123456
   thymeleaf:
-    prefix: /templates/
+    prefix: classpath:/templates/
     suffix: .html
   data:
     redis:
