--- a/SpringLearning/SpringBoot-Security/pom.xml
+++ b/SpringLearning/SpringBoot-Security/pom.xml
@@ -89,6 +89,12 @@
             <version>0.12.5</version>
         </dependency>
         <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.12.5</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.8.27</version>
